--- a/dropbox-sync/config.json
+++ b/dropbox-sync/config.json
@@ -2,7 +2,7 @@
   "name": "Dropbox Sync",
   "version": "1.3.0",
   "slug": "dropbox_sync",
-  "description": "Upload your Hass.io backups to Dropbox",
+  "description": "Upload your homeassistant.local backups to Dropbox",
   "url": "https://github.com/wire67/hassio-dropbox-sync",
   "startup": "before",
     "arch": [
@@ -26,5 +26,5 @@
     "keep_last": "int(0,)?",
     "filetypes": "str?"
   },
-  "image": "dwelch2101/dropbox-sync-{arch}"
+  "image": "wire67/dropbox-sync-{arch}"
 }
