reverted wrong url changes

--- a/dropbox-sync/config.json
+++ b/dropbox-sync/config.json
@@ -26,5 +26,5 @@
     "keep_last": "int(0,)?",
     "filetypes": "str?"
   },
-  "image": "wire67/dropbox-sync-{arch}"
+  "image": "dwelch2101/dropbox-sync-{arch}"
 }
